[tool.poetry]
name = "reversiai"
version = "0.1.0"
description = ""
authors = ["LittleHaku <ivandelhorno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
coverage = "^7.3.1"
pytest = "^7.4.2"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^7.3.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "*/reversi_gui.py",
    "*/main.py"
]